--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://twitter.com/Abhayra73458424">Twitter</a>
+      <a class="footer-link" href="https://dev-abhaysingh.github.io/site.personal//">Website</a>
       <p class="copyright">© 2020 Abhayraj Singh</p>
     </div>
 
